just about ready for a v1_0 release

--- a/lib/dcdsv0.fnal.gov.cfg
+++ b/lib/dcdsv0.fnal.gov.cfg
@@ -1,17 +1,16 @@
 # build product area
-proc productroot { {baseflag 0} } {
-    global product version
-    if { $baseflag == 0 } {
-        return "/usr/products/src4/\$F/local/${product}-${version}-none"
-    } elseif { $baseflag == 1 } {
-        return "/usr/products/src4/\$F/local"
-    } elseif { $baseflag == 2 } {
-        return "${product}-${version}-none"
+proc productroot { flavor } {
+    global product version env
+
+    if { "$flavor" == "SunOS+5+Oracle" } {
+        return "\$HOME/scratch/${product}-${version}-${flavor}"
+    } else {
+        return "/usr/products/src4/${flavor}/local/${product}-${version}-none"
     }
 }
 
 # operating systems to run on
-set os_dat(LIST)  {OSF1+V3 OSF1+V4 IRIX+5 IRIX+6 SunOS+5 AIX+3 AIX+4}
+set os_dat(LIST)  {OSF1+V3 OSF1+V4 IRIX+5 IRIX+6 SunOS+5 SunOS+5+Oracle AIX+3 AIX+4}
 
 # whether we should do a given OS by default
 set os_dat(do,AIX+3)   1
@@ -21,6 +20,7 @@ set os_dat(do,IRIX+6)  0
 set os_dat(do,OSF1+V3) 1
 set os_dat(do,OSF1+V4) 0
 set os_dat(do,SunOS+5) 1
+set os_dat(do,SunOS+5+Oracle) 0
 
 # hosts for each operating system
 set os_dat(HOST,AIX+3)	 dorfer.fnal.gov
@@ -30,9 +30,12 @@ set os_dat(HOST,IRIX+6)	 condor.fnal.gov
 set os_dat(HOST,OSF1+V3) outland.fnal.gov
 set os_dat(HOST,OSF1+V4) enterprise.fnal.gov
 set os_dat(HOST,SunOS+5) boise.fnal.gov
+set os_dat(HOST,SunOS+5+Oracle) fsui01.fnal.gov
 
 #
 # Environment variables to pass in
 #
 set os_dat(ENVVARS)	{DISPLAY CVSROOT DPRODUCTS}
 
+set env(CVSROOT)   cvsuser@dcdlaa.fnal.gov:/usr/products/olsshare/cvs
+set env(DPRODUCTS) /usr/products/src1/devel_database
