--- a/lib/dcdsv0.fnal.gov.cfg
+++ b/lib/dcdsv0.fnal.gov.cfg
@@ -10,7 +10,7 @@ proc productroot { flavor } {
 }
 
 # operating systems to run on
-set os_dat(LIST)  {OSF1+V3 OSF1+V4 IRIX+5 IRIX+6 SunOS+5 SunOS+5+Oracle AIX+3 AIX+4}
+set os_dat(LIST)  {OSF1+V3 OSF1+V4 IRIX+5 IRIX+6 Linux+2 SunOS+5 SunOS+5+Oracle AIX+3 AIX+4}
 
 # whether we should do a given OS by default
 set os_dat(do,AIX+3)   1
@@ -30,6 +30,7 @@ set os_dat(HOST,IRIX+6)	 condor.fnal.gov
 set os_dat(HOST,OSF1+V3) outland.fnal.gov
 set os_dat(HOST,OSF1+V4) enterprise.fnal.gov
 set os_dat(HOST,SunOS+5) boise.fnal.gov
+set os_dat(HOST,Linux+2) trocious.fnal.gov
 set os_dat(HOST,SunOS+5+Oracle) fsui01.fnal.gov
 
 #
