--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -33,7 +33,7 @@ proc productroot { flavor } {
 # -----
 # regexp to match a prompt -- something ending with a > % $ # or ? 
 # followed by a blank.
-set promptre {[>$%#?] $}
+set promptre {[>$%#] $}
 
 # -----
 # regexp to match a "set -x" echo-ed make command
@@ -53,6 +53,7 @@ set errorlist {
 	{: *[-0-9]* ?[dD]oes not exist}
 	{: *[-0-9]* ?[Nn]ot found}
 	{: *[-0-9]* ?[Nn]o such [fd]i[lr]}
+	{: A file or directory in the path name does not exist.}
 }
 set cmdfailre [join $errorlist "|"]
 
@@ -63,12 +64,17 @@ set nevermindlist {
 }
 set cmdnevermindre [join $nevermindlist "|"]
 
+# -----
+# regexp to notice a question
+
+set questionre {\? $|: $}
+
 # ------------------------------------------------------------------
 # Operating System specifics
 #
 
 # operating systems to run on
-set os_dat(LIST)  {OSF1+V3 OSF1+V4 IRIX+5 IRIX+6 SunOS+5 AIX+3 AIX+4}
+set os_dat(LIST)  {OSF1+V3 OSF1+V4 IRIX+5 IRIX+6 Linux+2 SunOS+5 AIX+3 AIX+4}
 # set os_dat(LIST)  {OSF1+V3 IRIX+5 SunOS+5 AIX+3}
 
 # hosts for each operating system
@@ -79,14 +85,19 @@ set os_dat(HOST,IRIX+6)	 unknown
 set os_dat(HOST,OSF1+V3) unknown
 set os_dat(HOST,OSF1+V4) unknown
 set os_dat(HOST,SunOS+5) unknown
+set os_dat(HOST,Linux+2) unknown
 
 # path additions for each system , so we can find compilers, X libraries
 # etc.
-set os_dat(PATH,AIX+3)   "/usr/bin/X11:/usr/lpp/X11/Xamples/bin"
-set os_dat(PATH,AIX+4)   "/usr/bin/X11:/usr/lpp/X11/Xamples/bin"
-set os_dat(PATH,IRIX+5)  "/usr/X11/bin:/usr/bsd:/usr/ccs/bin"
-set os_dat(PATH,IRIX+6)  "/usr/X11/bin:/usr/ccs/bin"
-set os_dat(PATH,SunOS+5) "/opt/SUNWspro/bin:/bin:/usr/bin:/usr/ccs/bin:/usr/ucb:/usr/openwin/bin"
+set os_dat(PATH,AIX+3)   "/usr/bin/X11:/usr/lpp/X11/Xamples/bin:/usr/local/bin"
+set os_dat(PATH,AIX+4)   "/usr/bin/X11:/usr/lpp/X11/Xamples/bin:/usr/local/bin"
+set os_dat(PATH,IRIX+5)  "/usr/X11/bin:/usr/bsd:/usr/ccs/bin:/usr/local/bin"
+set os_dat(PATH,IRIX+6)  "/usr/X11/bin:/usr/ccs/bin:/usr/local/bin"
+set os_dat(PATH,SunOS+5) "/opt/SUNWspro/bin:/bin:/usr/bin:/usr/ccs/bin:/usr/ucb:/usr/openwin/bin:/usr/local/bin"
+set os_dat(PATH,SunOS+6) "/opt/SUNWspro/bin:/bin:/usr/bin:/usr/ccs/bin:/usr/ucb:/usr/openwin/bin:/usr/local/bin"
+set os_dat(PATH,OSF1+V3) "/sbin:/usr/ccs/bin:/usr/local/bin"
+set os_dat(PATH,OSF1+V4) "/sbin:/usr/ccs/bin:/usr/local/bin"
+set os_dat(PATH,Linux+2) "/bin:/sbin:/usr/bin:/usr/local/bin:/usr/X11R6/bin"
 
 
 #
@@ -102,10 +113,10 @@ set os_dat(ENVVARS)	{DISPLAY CVSROOT DPRODUCTS}
 # -- setup so setups work
 #
 set os_dat(COMMANDS)	{
-	{stty erase '^?'}
+	{stty erase '^?' kill '^c'}
 	{vi() { xterm -e vi "$@"; } }
 	{edt() { xterm -e edt  "$@"; } }
-	{. /usr/local/etc/setpath.sh; . /usr/local/etc/setups.sh}
+	{. /usr/local/etc/setups.sh}
 	{setup cvs} 
 	{PRODUCTS="$DPRODUCTS $PRODUCTS"; export PRODUCTS}
 }
@@ -119,46 +130,52 @@ set os_dat(PLAT_COMMANDS,SunOS+5) {
 #
 
 set machine1 {
-    {init   		all 	"cd %d\n cvs co -r %V -d %T %P"}
-    {cvs-co-OK		turns 	"cd %D\n make declare"}
-    {make-declare-OK	async	"cd %D\n set +x\n setup -b -f %F %P %V\n set-x"}
-    {set-all-OK		async	"cd %d\n make all"}
-    {make-all-OK	async	"cd %D\n make test"}
+    {init   		all 	"cd %d; cvs co -r %V -d %T -A %P"}
+    {cvs-co-OK		turns 	"cd %D; make declare"}
+    {make-declare-OK	async	"cd %D; set +x; setup -b -f %F %P %V; set -x"}
+    {set-+x-OK		async	"cd %D; make all"}
+    {make-all-OK	async	"cd %D; make test"}
 }
 
 set machine2 {
-    {init		all	"cd %D\n set +x\n setup -b -f %F %P %V\n set-x"}
-    {set-all-OK		async	"cd %d\n make all"}
-    {make-all-OK	async	"cd %D\n make test"}
+    {init		all	"cd %D; set +x; setup -b -f %F %P %V; set -x"}
+    {set-+x-OK		async	"cd %D; make all"}
+    {make-all-OK	async	"cd %D; make test"}
 }
 
 set machine3 {
-    {init   		all 	"cd %d\n cvs co -r %V -d %T %P"}
-    {cvs-co-OK		turns 	"cd %D\n make declare"}
-    {make-declare-OK	async	"cd %D\n set +x\n setup -b -f %F %P %V\n set-x"}
-    {set-all-OK		async	"cd %d\n make all"}
-    {make-all-OK	async	"cd %D\n make test"}
+    {init   		all 	"cd %d; cvs co -r %V -d %T -A %P"}
+    {cvs-co-OK		turns 	"cd %D; make declare"}
+    {make-declare-OK	async	"cd %D; set +x; setup -b -f %F %P %V; set -x"}
+    {set-+x-OK		async	"cd %D; make all"}
+    {make-all-OK	async	"cd %D; make test"}
     {make-test-OK	async	"cd %D; make clean"}
-    {make-clean-OK	async	"cd %D; make %R"}
+    {make-clean-OK	turns	"cd %D; make %R"}
     {make-local-OK	async	"cd %d; cvs release -d %T"}
     {make-kits-OK	async	"cd %d; cvs release -d %T"}
+    {cvs-release-Question async "y"}
+}
+
+set fastkits {
+    {init			all	"cd %D; make autokits"}
+    {make-autokits-Question	turns	"y"}
 }
 
 array set cmd_menu {
     { 1 cd}	 	  {cmd_parallel  "cd %D"}
-    { 2 cvs checkout}	  {cmd_parallel  "cd %d; cvs checkout -r %V -d %T %P" }
+    { 2 cvs checkout}	  {cmd_parallel  "cd %d; cvs co -r %V -d %T -A %P" }
     { 3 make declare}	  {cmd_taketurns "(cd %D; make declare)"}
-    { 4 setup}	  	  {cmd_parallel  "set +x; \
-					  setup -b -f %F %P %V; \
-					  set -x"}
+    { 4 setup}	  	  {cmd_parallel  "set +x;setup -b -f %F %P %V;set -x"}
     { 5 make all}	  {cmd_parallel  "(cd %D; make all)"}
     { 6 make test}	  {cmd_parallel  "(cd %D; make test)"}
     { 7 make clean}	  {cmd_parallel  "(cd %D; make clean)"}
-    { 8 make local|kits}  {cmd_parallel  "(cd %D; make %R)"}
+    { 8 make local|kits}  {cmd_taketurns  "(cd %D; make %R)"}
     { 9 cvs release}	  {cmd_parallel  "cd %d; cvs release -d %T"}
     {10 auto 1..6}	  {cmd_machine $machine1}
     {11 auto 4..6}	  {cmd_machine $machine2}
     {12 auto 1..9}	  {cmd_machine $machine3}
+    {13 interrupt}	  {cmd_parallel  "\x003"}
+    {14 fast-kits}	  {cmd_machine $fastkits}
+    {abort auto}	  {clear_statepending; cmd_parallel "\x003"}
     {exit} 		  {cmd_parallel  "exit"; after 5000 exit}
 }
-
