Making Question state work better...

--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -67,7 +67,7 @@ set cmdnevermindre [join $nevermindlist "|"]
 # -----
 # regexp to notice a question
 
-set questionre {\? $|: $}
+set questionre {\? $|\]: $}
 
 # ------------------------------------------------------------------
 # Operating System specifics
@@ -92,7 +92,7 @@ set os_dat(HOST,Linux+2) unknown
 set os_dat(PATH,AIX+3)   "/usr/bin/X11:/usr/lpp/X11/Xamples/bin:/usr/local/bin"
 set os_dat(PATH,AIX+4)   "/usr/bin/X11:/usr/lpp/X11/Xamples/bin:/usr/local/bin"
 set os_dat(PATH,IRIX+5)  "/usr/X11/bin:/usr/bsd:/usr/ccs/bin:/usr/local/bin"
-set os_dat(PATH,IRIX+6)  "/usr/X11/bin:/usr/ccs/bin:/usr/local/bin"
+set os_dat(PATH,IRIX+6)  "/usr/bin/X11:/usr/ccs/bin:/usr/local/bin:/usr/bsd/bin"
 set os_dat(PATH,SunOS+5) "/opt/SUNWspro/bin:/bin:/usr/bin:/usr/ccs/bin:/usr/ucb:/usr/openwin/bin:/usr/local/bin"
 set os_dat(PATH,SunOS+6) "/opt/SUNWspro/bin:/bin:/usr/bin:/usr/ccs/bin:/usr/ucb:/usr/openwin/bin:/usr/local/bin"
 set os_dat(PATH,OSF1+V3) "/sbin:/usr/ccs/bin:/usr/local/bin"
@@ -158,7 +158,7 @@ set machine3 {
 
 set fastkits {
     {init			all	"cd %D; make autokits"}
-    {make-autokits-Question	turns	"y"}
+    {make-autokits-Question-1	turns	"y"}
 }
 
 array set cmd_menu {
