--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -153,7 +153,7 @@ set machine3 {
     {make-clean-OK	turns	"cd %D; make %R"}
     {make-local-OK	async	"cd %d; cvs release -d %T"}
     {make-kits-OK	async	"cd %d; cvs release -d %T"}
-    {cvs-release-Question async "y"}
+    {cvs-release-Question-1 async "y"}
 }
 
 set fastkits {
