added checkout/export code, merged in new makefile stuff

--- a/lib/dcdsv0.fnal.gov.cfg
+++ b/lib/dcdsv0.fnal.gov.cfg
@@ -5,7 +5,7 @@ proc productroot { flavor } {
     if { "$flavor" == "SunOS+5+Oracle" } {
         return "\$HOME/scratch/${product}-${version}-${flavor}"
     } else {
-        return "/usr/products/src4/${flavor}/local/${product}-${version}-none"
+        return "/usr/products/src4/bm-scratch/${product}-${version}-${flavor}"
     }
 }
 
