--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -50,6 +50,8 @@ set errorlist {
 	{[Ee]rror code [^0]}
 	{[Uu]nrecognized command:}
 	{[Gg]arbled command:}
+	{end of file from server}
+	{: \[.* aborted\]:}
 	{: *[-0-9]* ?[dD]oes not exist}
 	{: *[-0-9]* ?[Nn]ot found}
 	{: *[-0-9]* ?[Nn]o such [fd]i[lr]}
@@ -58,16 +60,19 @@ set errorlist {
 set cmdfailre [join $errorlist "|"]
 
 # -----
-# regexp to detect that make ignored an error...
+# regexp to detect that make or cvs ignored an error...
 set nevermindlist {
 	{[Ii]gnored}
+	{could not patch.*will refetch}
 }
 set cmdnevermindre [join $nevermindlist "|"]
 
 # -----
-# regexp to notice a question
+# regexp to notice a question: last one checks for echo "...\c" with
+#    the \c being printed...
 
-set questionre {\? $|\]: $}
+set questionre {\? $|\]: $|\? \\c
+$}
 
 # ------------------------------------------------------------------
 # Operating System specifics
@@ -125,57 +130,12 @@ set os_dat(PLAT_COMMANDS,SunOS+5) {
 	{OPENWINHOME="/usr/openwin/bin"; export OPENWINHOME}
 }
 
-# ------------------------------------------------------------------
-# State machines actions for command menu
-#
-
-set machine1 {
-    {init   		all 	"cd %d; cvs co -r %V -d %T -A %P"}
-    {cvs-co-OK		turns 	"cd %D; make declare"}
-    {make-declare-OK	async	"cd %D; set +x; setup -b -f %F %P %V; set -x"}
-    {set-+x-OK		async	"cd %D; make all"}
-    {make-all-OK	async	"cd %D; make test"}
+set os_dat(PLAT_COMMANDS,IRIX+6) {
+	{SGI_ABI=-n32; export SGI_ABI}
 }
 
-set machine2 {
-    {init		all	"cd %D; set +x; setup -b -f %F %P %V; set -x"}
-    {set-+x-OK		async	"cd %D; make all"}
-    {make-all-OK	async	"cd %D; make test"}
-}
-
-set machine3 {
-    {init   		all 	"cd %d; cvs co -r %V -d %T -A %P"}
-    {cvs-co-OK		turns 	"cd %D; make declare"}
-    {make-declare-OK	async	"cd %D; set +x; setup -b -f %F %P %V; set -x"}
-    {set-+x-OK		async	"cd %D; make all"}
-    {make-all-OK	async	"cd %D; make test"}
-    {make-test-OK	async	"cd %D; make clean"}
-    {make-clean-OK	turns	"cd %D; make %R"}
-    {make-local-OK	async	"cd %d; cvs release -d %T"}
-    {make-kits-OK	async	"cd %d; cvs release -d %T"}
-    {cvs-release-Question-1 async "y"}
-}
-
-set fastkits {
-    {init			all	"cd %D; make autokits"}
-    {make-autokits-Question-1	turns	"y"}
-}
-
-array set cmd_menu {
-    { 1 cd}	 	  {cmd_parallel  "cd %D"}
-    { 2 cvs checkout}	  {cmd_parallel  "cd %d; cvs co -r %V -d %T -A %P" }
-    { 3 make declare}	  {cmd_taketurns "(cd %D; make declare)"}
-    { 4 setup}	  	  {cmd_parallel  "set +x;setup -b -f %F %P %V;set -x"}
-    { 5 make all}	  {cmd_parallel  "(cd %D; make all)"}
-    { 6 make test}	  {cmd_parallel  "(cd %D; make test)"}
-    { 7 make clean}	  {cmd_parallel  "(cd %D; make clean)"}
-    { 8 make local|kits}  {cmd_taketurns  "(cd %D; make %R)"}
-    { 9 cvs release}	  {cmd_parallel  "cd %d; cvs release -d %T"}
-    {10 auto 1..6}	  {cmd_machine $machine1}
-    {11 auto 4..6}	  {cmd_machine $machine2}
-    {12 auto 1..9}	  {cmd_machine $machine3}
-    {13 interrupt}	  {cmd_parallel  "\x003"}
-    {14 fast-kits}	  {cmd_machine $fastkits}
-    {abort auto}	  {clear_statepending; cmd_parallel "\x003"}
-    {exit} 		  {cmd_parallel  "exit"; after 5000 exit}
+if {[info exists env(BUILDMANAGER_EXPORT)]} {
+    source ${dir}/lib/export.cfg
+} else {
+    source ${dir}/lib/checkout.cfg
 }
