hacks for new ups, export vs checkout

--- a/lib/dcdsv0.fnal.gov.cfg
+++ b/lib/dcdsv0.fnal.gov.cfg
@@ -38,5 +38,5 @@ set os_dat(HOST,SunOS+5+Oracle) fsui01.fnal.gov
 #
 set os_dat(ENVVARS)	{DISPLAY CVSROOT DPRODUCTS}
 
-set env(CVSROOT)   cvsuser@dcdlaa.fnal.gov:/usr/products/olsshare/cvs
-set env(DPRODUCTS) /usr/products/src1/devel_database
+# set env(CVSROOT)   cvsuser@dcdlaa.fnal.gov:/usr/products/olsshare/cvs
+# set env(DPRODUCTS) /usr/products/src1/devel_database
