--- a/lib/export.cfg
+++ b/lib/export.cfg
@@ -3,8 +3,8 @@
 #
 
 set machine1 {
-    {init   		all 	"cd %d; cvs export -r %V -d %T %P"}
-    {cvs-export-OK  	turns	"cd %D; make declare"}
+    {init   		turns 	"cd %d; cvs export -r %V -d %T %P"}
+    {cvs-export-OK  	async	"cd %D; make declare"}
     {make-declare-OK	async	"cd %D; set +x; setup -b -f %F %P %V; set -x"}
     {set-+x-OK		async	"cd %D; make all"}
     {make-all-OK	async	"cd %D; make test"}
@@ -17,8 +17,8 @@ set machine2 {
 }
 
 set machine3 {
-    {init   		all 	"cd %d; cvs export -r %V -d %T %P"}
-    {cvs-export-OK	turns	"cd %D; make declare"}
+    {init   		turns 	"cd %d; cvs export -r %V -d %T %P"}
+    {cvs-export-OK	async	"cd %D; make declare"}
     {make-declare-OK	async	"cd %D; set +x; setup -b -f %F %P %V; set -x"}
     {set-+x-OK		async	"cd %D; make all"}
     {make-all-OK	async	"cd %D; make test"}
@@ -38,7 +38,7 @@ set fastrelease {
 
 array set cmd_menu {
     { 1 cd}	 	  {cmd_parallel  "cd %D"}
-    { 2 cvs export}	  {cmd_parallel  "cd %d; cvs export -r %V -d %T %P" }
+    { 2 cvs export}	  {cmd_taketurns "cd %d; cvs export -r %V -d %T %P" }
     { 3 make declare}	  {cmd_taketurns "(cd %D; make declare)"}
     { 4 setup}	  	  {cmd_parallel  "set +x;setup -b -f %F %P %V;set -x"}
     { 5 make all}	  {cmd_parallel  "(cd %D; make all)"}
