--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -64,6 +64,7 @@ set cmdfailre [join $errorlist "|"]
 set nevermindlist {
 	{[Ii]gnored}
 	{could not patch.*will refetch}
+	{product will still be declared}
 }
 set cmdnevermindre [join $nevermindlist "|"]
 
@@ -121,7 +122,10 @@ set os_dat(COMMANDS)	{
 	{stty erase '^?' kill '^c'}
 	{vi() { xterm -e vi "$@"; } }
 	{edt() { xterm -e edt  "$@"; } }
-	{. /usr/local/etc/setups.sh}
+	{if [ -f $UPS_DIR/bin/ups  -a -f /usr/local/etc/setupsII.sh ] 
+	 then  . /usr/local/etc/setupsII.sh
+	 else . /usr/local/etc/setups.sh
+	 fi}
 	{setup cvs} 
 	{PRODUCTS="$DPRODUCTS $PRODUCTS"; export PRODUCTS}
 }
