okay, looks like it might work for upsII now

--- a/lib/dcdsv0.fnal.gov.cfg
+++ b/lib/dcdsv0.fnal.gov.cfg
@@ -10,7 +10,7 @@ proc productroot { flavor } {
 }
 
 # operating systems to run on
-set os_dat(LIST)  {OSF1+V3 OSF1+V4 IRIX+5 IRIX+6 Linux+2 SunOS+5 SunOS+5+Oracle AIX+3 AIX+4}
+set os_dat(LIST)  {AIX+3 AIX+4 IRIX+5 IRIX+6 OSF1+V3 OSF1+V4 Linux+2 SunOS+5}
 
 # whether we should do a given OS by default
 set os_dat(do,AIX+3)   1
