--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -72,8 +72,7 @@ set cmdnevermindre [join $nevermindlist "|"]
 # regexp to notice a question: last one checks for echo "...\c" with
 #    the \c being printed...
 
-set questionre {\? $|\]: $|\? \\c
-$}
+set questionre {\? $|\] *: $|\? \\c}
 
 # ------------------------------------------------------------------
 # Operating System specifics
@@ -122,7 +121,7 @@ set os_dat(COMMANDS)	{
 	{stty erase '^?' kill '^c'}
 	{vi() { xterm -e vi "$@"; } }
 	{edt() { xterm -e edt  "$@"; } }
-	{if [ -f $UPS_DIR/bin/ups  -a -f /usr/local/etc/setupsII.sh ] 
+	{if [ ! -f $UPS_DIR/bin/ups_list  -a -f /usr/local/etc/setupsII.sh ] 
 	 then  . /usr/local/etc/setupsII.sh
 	 else . /usr/local/etc/setups.sh
 	 fi}
