moved stuff around massively

--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -37,7 +37,7 @@ set promptre {[>$%#] $}
 
 # -----
 # regexp to match a "set -x" echo-ed make command
-set cmdstartre  "\\+ +(\[a-zA-Z0-9_\]+)(\[^\n\r\]+)\[\n\r\]"
+set cmdstartre  "\\+ (\[a-zA-Z0-9_\]+)(\[^\n\r\]+)"
 
 # -----
 # regexp to match a failed make, cat, or sed
@@ -120,7 +120,9 @@ set os_dat(ENVVARS)	{DISPLAY CVSROOT DPRODUCTS}
 set os_dat(COMMANDS)	{
 	{stty erase '^?' kill '^c'}
 	{vi() { xterm -e vi "$@"; } }
+	{view() { xterm -e view "$@"; } }
 	{edt() { xterm -e edt  "$@"; } }
+	{tpu() { xterm -e tpu  "$@"; } }
 	{if [ ! -f $UPS_DIR/bin/ups_list  -a -f /usr/local/etc/setupsII.sh ] 
 	 then  . /usr/local/etc/setupsII.sh
 	 else . /usr/local/etc/setups.sh
