state stuff was messed up

--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -37,7 +37,7 @@ set promptre {[>$%#] $}
 
 # -----
 # regexp to match a "set -x" echo-ed make command
-set cmdstartre  "\\+ (\[a-zA-Z0-9_\]+)(\[^\n\r\]+)"
+set cmdstartre  "\\+ (\[a-zA-Z0-9_\]+)(\[^\n\r\]*)"
 
 # -----
 # regexp to match a failed make, cat, or sed
@@ -72,7 +72,7 @@ set cmdnevermindre [join $nevermindlist "|"]
 # regexp to notice a question: last one checks for echo "...\c" with
 #    the \c being printed...
 
-set questionre {\? $|\] *: $|\? \\c}
+set questionre {\? $|: $|\? \\c$}
 
 # ------------------------------------------------------------------
 # Operating System specifics
