turned on logging, added history popdown, failed to set

--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -129,6 +129,7 @@ set os_dat(COMMANDS)	{
 	 fi}
 	{setup cvs} 
 	{PRODUCTS="$DPRODUCTS $PRODUCTS"; export PRODUCTS}
+        {F="%F"; export F}
 }
 
 set os_dat(PLAT_COMMANDS,SunOS+5) {
