--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -33,7 +33,16 @@ proc productroot { flavor } {
 # -----
 # regexp to match a prompt -- something ending with a > % $ # or ? 
 # followed by a blank.
-set promptre {[>$%#] $}
+# -- amended to be $%# with a space, or a non-dash followed by
+#    a space so ls -l output doesn't give us the heebie geebies
+set promptre {[$%#] $|[^-]> $}
+
+#
+# any of errorlist or cmdstartre stuff should match
+# this simpler pattern, which since it starts with all
+# "rarer" characters (punctuation) should match faster
+#
+set allwatchre {[+:*] [0-9a-zA-Z -]+|\(i[a-z ]*|'n[a-z ]*}
 
 # -----
 # regexp to match a "set -x" echo-ed make command
@@ -42,20 +51,22 @@ set cmdstartre  "\\+ (\[a-zA-Z0-9_\]+)(\[^\n\r\]*)"
 # -----
 # regexp to match a failed make, cat, or sed
 set errorlist {
-	{: [-0-9]* ?[Cc]annot open}
-	{: [a-zA-Z0-9]+ [Ee]rror:}
-	{: [-0-9]* ?[Ee]rror}
-	{[Dd]on't know how}
-	{Stop.}
-	{[Ee]rror code [^0]}
+	{: [a-zA-Z0-9 -]+ [Ee]rror:}
+	{'t know how}
+	{\* [Ee][a-z]* code [^0]}
+	{\* [][a-zA-Z]* Exit [^0]}
+	{\* [][a-zA-Z]* Error [^0]}
+	{\* [nN]o rule to make}
 	{[Uu]nrecognized command:}
 	{[Gg]arbled command:}
 	{end of file from server}
 	{: \[.* aborted\]:}
-	{: *[-0-9]* ?[dD]oes not exist}
-	{: *[-0-9]* ?[Nn]ot found}
-	{: *[-0-9]* ?[Nn]o such [fd]i[lr]}
-	{: A file or directory in the path name does not exist.}
+	{: *[-0-9 a-z]*[Cc]cannot open}
+	{: *[-0-9 a-z]*[Cc]cannot find}
+	{: *[-0-9 a-z]*[dD]oes not exist}
+	{: *[-0-9 a-z]*[Nn]ot found}
+	{: *[-0-9 a-z]*[Nn]o such [fd]i[lr]}
+	{: *[-0-9 a-z]*[tT]he error code}
 }
 set cmdfailre [join $errorlist "|"]
 
@@ -63,8 +74,8 @@ set cmdfailre [join $errorlist "|"]
 # regexp to detect that make or cvs ignored an error...
 set nevermindlist {
 	{[Ii]gnored}
-	{could not patch.*will refetch}
-	{product will still be declared}
+	{will refetch}
+	{will still be declared}
 }
 set cmdnevermindre [join $nevermindlist "|"]
 
@@ -72,7 +83,7 @@ set cmdnevermindre [join $nevermindlist "|"]
 # regexp to notice a question: last one checks for echo "...\c" with
 #    the \c being printed...
 
-set questionre {\? $|: $|\? \\c$}
+set questionre {\? $|\? \\c$}
 
 # ------------------------------------------------------------------
 # Operating System specifics
@@ -129,16 +140,16 @@ set os_dat(COMMANDS)	{
 	 fi}
 	{setup cvs} 
 	{PRODUCTS="$DPRODUCTS $PRODUCTS"; export PRODUCTS}
-        {F="%F"; export F}
 }
 
-set os_dat(PLAT_COMMANDS,SunOS+5) {
+foreach f $os_dat(LIST)  {
+   set os_dat(PLAT_COMMANDS,$f) "{F=$f ; export F}"
+}
+lappend os_dat(PLAT_COMMANDS,SunOS+5) \
 	{OPENWINHOME="/usr/openwin/bin"; export OPENWINHOME}
-}
 
-set os_dat(PLAT_COMMANDS,IRIX+6) {
+lappend os_dat(PLAT_COMMANDS,IRIX+6) \
 	{SGI_ABI=-n32; export SGI_ABI}
-}
 
 if {[info exists env(BUILDMANAGER_EXPORT)]} {
     source ${dir}/lib/export.cfg
