most of Lauri's changes

--- a/lib/dcdsv0.fnal.gov.cfg
+++ b/lib/dcdsv0.fnal.gov.cfg
@@ -37,7 +37,7 @@ set os_dat(HOST,SunOS+5+Oracle) fsui01.fnal.gov
 #
 # Environment variables to pass in
 #
-set os_dat(ENVVARS)	{DISPLAY CVSROOT DPRODUCTS}
+set os_dat(ENVVARS)	{DISPLAY CVSROOT}
 
 # set env(CVSROOT)   cvsuser@dcdlaa.fnal.gov:/usr/products/olsshare/cvs
 # set env(DPRODUCTS) /usr/products/src1/devel_database
