--- a/lib/export.cfg
+++ b/lib/export.cfg
@@ -4,22 +4,20 @@
 
 set machine1 {
     {init   		turns 	"cd %d; cvs export -r %V -d %T %P"}
-    {cvs-export-OK  	async	"cd %D; make declare"}
-    {make-declare-OK	async	"cd %D; set +x; setup -q '?build' -f %F %P %V; set -x"}
+    {cvs-export-OK	async	"cd %D; set +x; setup -q '?build' -r `pwd` -M ./ups -m %P.table %P; set -x"}
     {set-+x-OK		async	"cd %D; make all"}
     {make-all-OK	async	"cd %D; make test"}
 }
 
 set machine2 {
-    {init		all	"cd %D; set +x; setup -q '?build' -f %F %P %V; set -x"}
+    {init		all	"cd %D; set +x; setup -q '?build' -r `pwd` -M ./ups -m %P.table %P; set -x"}
     {set-+x-OK		async	"cd %D; make all"}
     {make-all-OK	async	"cd %D; make test"}
 }
 
 set machine3 {
     {init   		turns 	"cd %d; cvs export -r %V -d %T %P"}
-    {cvs-export-OK	async	"cd %D; make declare"}
-    {make-declare-OK	async	"cd %D; set +x; setup -q '?build' -f %F %P %V; set -x"}
+    {cvs-export-OK	async	"cd %D; set +x; setup -q '?build' -r `pwd` -M ./ups -m %P.table %P; set -x"}
     {set-+x-OK		async	"cd %D; make all"}
     {make-all-OK	async	"cd %D; make test"}
     {make-test-OK	async	"cd %D; make clean"}
@@ -40,7 +38,7 @@ array set cmd_menu {
     { 1 cd}	 	  {cmd_parallel  "cd %D"}
     { 2 cvs export}	  {cmd_taketurns "cd %d; cvs export -r %V -d %T %P" }
     { 3 make declare}	  {cmd_taketurns "(cd %D; make declare)"}
-    { 4 setup}	  	  {cmd_parallel  "set +x;setup -q '?build' -f %F %P %V;set -x"}
+    { 4 setup}	  	  {cmd_parallel  "cd %D; set +x; setup -q '?build' -r `pwd` -M ./ups -m %P.table %P; set -x"}
     { 5 make all}	  {cmd_parallel  "(cd %D; make all)"}
     { 6 make test}	  {cmd_parallel  "(cd %D; make test)"}
     { 7 make clean}	  {cmd_parallel  "(cd %D; make clean)"}
