--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -119,7 +119,7 @@ set os_dat(PATH,Linux+2) "/bin:/sbin:/usr/bin:/usr/local/bin:/usr/X11R6/bin"
 #
 # Environment variables to pass in
 #
-set os_dat(ENVVARS)	{DISPLAY CVSROOT DPRODUCTS}
+set os_dat(ENVVARS)	{DISPLAY CVSROOT}
 
 #
 # some items to make life easier
@@ -134,12 +134,8 @@ set os_dat(COMMANDS)	{
 	{view() { xterm -e view "$@"; } }
 	{edt() { xterm -e edt  "$@"; } }
 	{tpu() { xterm -e tpu  "$@"; } }
-	{if [ ! -f $UPS_DIR/bin/ups_list  -a -f /usr/local/etc/setupsII.sh ] 
-	 then  . /usr/local/etc/setupsII.sh
-	 else . /usr/local/etc/setups.sh
-	 fi}
+	{. `ups setup ups`}
 	{setup cvs} 
-	{PRODUCTS="$DPRODUCTS $PRODUCTS"; export PRODUCTS}
 }
 
 foreach f $os_dat(LIST)  {
