--- a/lib/checkout.cfg
+++ b/lib/checkout.cfg
@@ -7,15 +7,13 @@ set machine1 {
     {init   		all 	"cd %d; cvs co -r %V -d %T -A %P"}
     {cvs-co-Failed	async	"cd %D; cvs update -d"}
     {cvs-co-OK		async 	"cd %D; cvs -H update"}
-    {cvs-update-OK	async 	"cd %D; cvs upd -A"}
-    {cvs-upd-OK		turns 	"cd %D; make declare"}
-    {make-declare-OK	async	"cd %D; set +x; setup -q '?build' -f %F %P %V; set -x"}
+    {cvs-update-OK	async	"cd %D; set +x; setup -q '?build' -r `pwd` -M ./ups -m %P.table %P; set -x"}
     {set-+x-OK		async	"cd %D; make all"}
     {make-all-OK	async	"cd %D; make test"}
 }
 
 set machine2 {
-    {init		all	"cd %D; set +x; setup -q '?build' -f %F %P %V; set -x"}
+    {init		all	"cd %D; set +x; setup -q '?build' -r `pwd` -M ./ups -m %P.table %P; set -x"}
     {set-+x-OK		async	"cd %D; make all"}
     {make-all-OK	async	"cd %D; make test"}
 }
@@ -24,10 +22,8 @@ set machine2 {
 set machine3 {
     {init   		all 	"cd %d; cvs co -r %V -d %T -A %P"}
     {cvs-co-Failed	async	"cd %D; cvs update -d"}
-    {cvs-co-OK		turns 	"cd %D; cvs -H update"}
-    {cvs-update-OK	async 	"cd %D; cvs upd -A"}
-    {cvs-upd-OK		turns 	"cd %D; make declare"}
-    {make-declare-OK	async	"cd %D; set +x; setup -q '?build' -f %F %P %V; set -x"}
+    {cvs-co-OK		async 	"cd %D; cvs -H update"}
+    {cvs-update-OK	async	"cd %D; set +x; setup -q '?build' -r `pwd` -M ./ups -m %P.table %P; set -x"}
     {set-+x-OK		async	"cd %D; make all"}
     {make-all-OK	async	"cd %D; make test"}
     {make-test-OK	async	"cd %D; make clean"}
@@ -48,7 +44,7 @@ array set cmd_menu {
     { 1 cd}	 	  {cmd_parallel  "cd %D"}
     { 2 cvs checkout}	  {cmd_parallel  "cd %d; cvs co -r %V -d %T -A %P" }
     { 3 make declare}	  {cmd_taketurns "(cd %D; make declare)"}
-    { 4 setup}	  	  {cmd_parallel  "set +x;setup -q '?build' -f %F %P %V;set -x"}
+    { 4 setup}	  	  {cmd_parallel  "cd %D; set +x; setup -q '?build' -r `pwd` -M ./ups -m %P.table %P; set -x"}
     { 5 make all}	  {cmd_parallel  "(cd %D; make all)"}
     { 6 make test}	  {cmd_parallel  "(cd %D; make test)"}
     { 7 make clean}	  {cmd_parallel  "(cd %D; make clean)"}
