cleaned up config files...

--- a/lib/dcdsv0.fnal.gov.cfg
+++ b/lib/dcdsv0.fnal.gov.cfg
@@ -10,16 +10,16 @@ proc productroot { flavor } {
 }
 
 # operating systems to run on
-set os_dat(LIST)  {AIX+3 AIX+4 IRIX+5 IRIX+6 Linux+2 OSF1+V3 OSF1+V4 SunOS+5}
+set os_dat(LIST)  {AIX+4 IRIX+5 IRIX+6 Linux+2 OSF1+V3 OSF1+V4 SunOS+5}
 
 # whether we should do a given OS by default
-set os_dat(do,AIX+3)   1
-set os_dat(do,AIX+4)   0
+set os_dat(do,AIX+3)   0
+set os_dat(do,AIX+4)   1
 set os_dat(do,IRIX+5)  1
-set os_dat(do,IRIX+6)  0
+set os_dat(do,IRIX+6)  1
 set os_dat(do,Linux+2) 1
 set os_dat(do,OSF1+V3) 1
-set os_dat(do,OSF1+V4) 0
+set os_dat(do,OSF1+V4) 1
 set os_dat(do,SunOS+5) 1
 set os_dat(do,SunOS+5+Oracle) 0
 
