--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -8,7 +8,7 @@ set releasetarget "kits"
 proc productroot { flavor } {
     global product version
 
-    return "/tmp/${product}-${version}-${flavor}"
+    return "/fnal/ups/${product}/${version}/${flavor}"
 }
 
 #
@@ -129,26 +129,33 @@ set os_dat(ENVVARS)	{DISPLAY CVSROOT}
 # -- setup so setups work
 #
 set os_dat(COMMANDS)	{
-	{stty erase '^?' kill '^c'}
-	{vi() { xterm -e vi "$@"; } }
-	{view() { xterm -e view "$@"; } }
-	{edt() { xterm -e edt  "$@"; } }
-	{tpu() { xterm -e tpu  "$@"; } }
-	{. `ups setup ups`}
-	{setup cvs} 
+	{stty erase '^?' intr '^c' kill '^u'}
+	{setup cvs}
 }
 
 foreach f $os_dat(LIST)  {
-   set os_dat(PLAT_COMMANDS,$f) "{F=$f ; export F}"
+   set os_dat(PLAT_COMMANDS,$f) "{setenv F $f}"
 }
 lappend os_dat(PLAT_COMMANDS,SunOS+5) \
-	{OPENWINHOME="/usr/openwin/bin"; export OPENWINHOME}
+	{setenv OPENWINHOME "/usr/openwin/bin"}
 
 lappend os_dat(PLAT_COMMANDS,IRIX+6) \
-	{SGI_ABI=-n32; export SGI_ABI}
+	{setenv SGI_ABI -n32}
 
-if {[info exists env(BUILDMANAGER_EXPORT)]} {
-    source ${dir}/lib/export.cfg
-} else {
-    source ${dir}/lib/checkout.cfg
+array set cmd_menu {
+    { 1 cd}	 	  {cmd_parallel  "cd %D"}
+    { 2 cvs export}	  {cmd_taketurns "cd %d; cvs export -r %V -d %T %P" }
+    { 2 cvs checkout}	  {cmd_parallel  "cd %d; cvs co -r %V -d %T -A %P" }
+    { 4 setup}	  	  {cmd_parallel  "cd %D; setup -q '?build' -r `pwd` -M ./ups -m %P.table %P"}
+    { 3 make declare}	  {cmd_taketurns "(cd %D; make declare)"}
+    { 5 make all}	  {cmd_parallel  "(cd %D; make all)"}
+    { 6 make test}	  {cmd_parallel  "(cd %D; make test)"}
+    { 7 make clean}	  {cmd_parallel  "(cd %D; make clean)"}
+    { 8 make local|kits}  {cmd_machine $fastrelease}
+    { 9 remove source}	  {cmd_parallel  "cd %d; rm -rf %T"}
+    {13 cvs update}	  {cmd_parallel "(cd %D; cvs update -d)"}
+    {14 cvs update -A}	  {cmd_parallel "(cd %D; cvs update -A)"}
+    {clear auto}	  {clear_statepending}
+    {interrupt}	  	  {cmd_parallel  "\x003"}
+    {exit} 		  {cmd_parallel  "exit"; after 5000 exit}
 }
