--- a/lib/dcdsv0.fnal.gov.cfg
+++ b/lib/dcdsv0.fnal.gov.cfg
@@ -2,37 +2,42 @@
 proc productroot { flavor } {
     global product version env
 
+    if { "$flavor" == "Linux+2" } {
+        return "/scratch/${product}-${version}-${flavor}"
+    }
+    if { "$flavor" == "CYGWIN32_NT" } {
+        return "/c/people/buildmanager/${product}-${version}-${flavor}"
+    }
     if { "$flavor" == "SunOS+5+Oracle" } {
         return "\$HOME/scratch/${product}-${version}-${flavor}"
-    } else {
-        return "/usr/products/src4/bm-scratch/${product}-${version}-${flavor}"
-    }
+    } 
+    return "/usr/products/src4/bm-scratch/${product}-${version}-${flavor}"
 }
 
 # operating systems to run on
-set os_dat(LIST)  {AIX+4 IRIX+5 IRIX+6 Linux+2 OSF1+V3 OSF1+V4 SunOS+5}
+set host_dat(LIST)  {dcdmwm dcdlaa condor bldirix65 trocious outland enterprise boise fndapj}
 
-# whether we should do a given OS by default
-set os_dat(do,AIX+3)   0
-set os_dat(do,AIX+4)   1
-set os_dat(do,IRIX+5)  1
-set os_dat(do,IRIX+6)  1
-set os_dat(do,Linux+2) 1
-set os_dat(do,OSF1+V3) 1
-set os_dat(do,OSF1+V4) 1
-set os_dat(do,SunOS+5) 1
-set os_dat(do,SunOS+5+Oracle) 0
+# whether we should do a given host by default
+set host_dat(do,dcdmwm)		1
+set host_dat(do,dcdlaa)		1
+set host_dat(do,condor)		1
+set host_dat(do,bldirix65)	0
+set host_dat(do,trocious)	1
+set host_dat(do,outland)	1
+set host_dat(do,enterprise)	1
+set host_dat(do,boise)		1
+set host_dat(do,fndapj)		0
 
-# hosts for each operating system
-set os_dat(HOST,AIX+3)	 dorfer.fnal.gov
-set os_dat(HOST,AIX+4)	 dcdmwm.fnal.gov
-set os_dat(HOST,IRIX+5)	 dcdlaa.fnal.gov
-set os_dat(HOST,IRIX+6)	 condor.fnal.gov
-set os_dat(HOST,OSF1+V3) outland.fnal.gov
-set os_dat(HOST,OSF1+V4) enterprise.fnal.gov
-set os_dat(HOST,SunOS+5) boise.fnal.gov
-set os_dat(HOST,Linux+2) trocious.fnal.gov
-set os_dat(HOST,SunOS+5+Oracle) fsui01.fnal.gov
+set host_dat(h2f,dcdmwm)	AIX+4.1
+set host_dat(h2f,dcdlaa)	IRIX+5.3
+set host_dat(h2f,condor)	IRIX+6.2
+set host_dat(h2f,bldirix65)	IRIX+6.5
+set host_dat(h2f,outland)	OSF1+V3
+set host_dat(h2f,enterprise)	OSF1+V4
+set host_dat(h2f,boise)		SunOS+5
+set host_dat(h2f,trocious)	Linux+2
+set host_dat(h2f,fndapj)	CYGWIN32_NT
+set host_dat(h2f,fsui01)	SunOS+5+Oracle
 
 #
 # Environment variables to pass in
