--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -90,7 +90,7 @@ set questionre {\? $|\? \\c$}
 #
 
 # operating systems to run on
-set os_dat(LIST)  {OSF1+V3 OSF1+V4 IRIX+5 IRIX+6 Linux+2 SunOS+5 AIX+3 AIX+4}
+set os_dat(LIST)  {OSF1+V3 OSF1+V4 IRIX+5.3 IRIX+6.2 IRIX+6.5  Linux+2 SunOS+5 AIX+3.2 AIX+4.1 CYGWIN32_NT}
 # set os_dat(LIST)  {OSF1+V3 IRIX+5 SunOS+5 AIX+3}
 
 # hosts for each operating system
@@ -136,6 +136,8 @@ set os_dat(COMMANDS)	{
 foreach f $os_dat(LIST)  {
    set os_dat(PLAT_COMMANDS,$f) "{setenv F $f}"
 }
+lappend os_dat(PLAT_COMMANDS,CYGWIN32_NT) \
+	{source /.bashrc}
 lappend os_dat(PLAT_COMMANDS,SunOS+5) \
 	{setenv OPENWINHOME "/usr/openwin/bin"}
 
@@ -143,19 +145,22 @@ lappend os_dat(PLAT_COMMANDS,IRIX+6) \
 	{setenv SGI_ABI -n32}
 
 array set cmd_menu {
-    { 1 cd}	 	  {cmd_parallel  "cd %D"}
-    { 2 cvs export}	  {cmd_taketurns "cd %d; cvs export -r %V -d %T %P" }
-    { 2 cvs checkout}	  {cmd_parallel  "cd %d; cvs co -r %V -d %T -A %P" }
-    { 4 setup}	  	  {cmd_parallel  "cd %D; setup -q '?build' -r `pwd` -M ./ups -m %P.table %P"}
-    { 3 make declare}	  {cmd_taketurns "(cd %D; make declare)"}
-    { 5 make all}	  {cmd_parallel  "(cd %D; make all)"}
-    { 6 make test}	  {cmd_parallel  "(cd %D; make test)"}
-    { 7 make clean}	  {cmd_parallel  "(cd %D; make clean)"}
-    { 8 make local|kits}  {cmd_machine $fastrelease}
-    { 9 remove source}	  {cmd_parallel  "cd %d; rm -rf %T"}
-    {13 cvs update}	  {cmd_parallel "(cd %D; cvs update -d)"}
-    {14 cvs update -A}	  {cmd_parallel "(cd %D; cvs update -A)"}
-    {clear auto}	  {clear_statepending}
-    {interrupt}	  	  {cmd_parallel  "\x003"}
-    {exit} 		  {cmd_parallel  "exit"; after 5000 exit}
+    {cd}	 	{cmd_parallel  "cd %D"}
+    {cvs export}	{cmd_taketurns "cd %d; cvs export -r %V -d %T %P" }
+    {cvs checkout}	{cmd_parallel  "cd %d; cvs co -r %V -d %T -A %P" }
+    {make build_n_test} {cmd_parallel "(cd %D; make build_n_test)"}
+    {setup -q build?}	{cmd_parallel  "cd %D; setup -q 'build?' -r `pwd` -M ./ups -m %P.table %P"}
+    {setup}	  	{cmd_parallel  "cd %D; setup  -r `pwd` -M ./ups -m %P.table %P"}
+    {make declare}	{cmd_taketurns "(cd %D; make declare)"}
+    {make all}	  	{cmd_parallel  "(cd %D; make all)"}
+    {make test}	  	{cmd_parallel  "(cd %D; make test)"}
+    {make clean}	{cmd_parallel  "(cd %D; make clean)"}
+    {make kits}  	{cmd_taketurns "(cd %D; make kits)"}
+    {make local}  	{cmd_taketurns "(cd %D; make local)"}
+    {remove source}	{cmd_parallel  "cd %d; rm -rf %T"}
+    {cvs update}	{cmd_parallel "(cd %D; cvs update -d)"}
+    {cvs update -A}	{cmd_parallel "(cd %D; cvs update -A)"}
+    {clear auto}	{clear_statepending}
+    {interrupt}	  	{cmd_parallel  "\x003"}
+    {exit} 		{cmd_parallel  "exit"; after 5000 exit}
 }
