--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -131,36 +131,37 @@ set os_dat(ENVVARS)	{DISPLAY CVSROOT}
 set os_dat(COMMANDS)	{
 	{stty erase '^?' intr '^c' kill '^u'}
 	{setup cvs}
+	{setup upd}
 }
 
 foreach f $os_dat(LIST)  {
-   set os_dat(PLAT_COMMANDS,$f) "{setenv F $f}"
+   set os_dat(PLAT_COMMANDS,$f) "{bm_setenv F $f}"
 }
 lappend os_dat(PLAT_COMMANDS,CYGWIN32_NT) \
 	{source /.bashrc}
 lappend os_dat(PLAT_COMMANDS,SunOS+5) \
-	{setenv OPENWINHOME "/usr/openwin/bin"}
+	{bm_setenv OPENWINHOME "/usr/openwin"}
 
 lappend os_dat(PLAT_COMMANDS,IRIX+6) \
-	{setenv SGI_ABI -n32}
+	{bm_setenv SGI_ABI -n32}
 
 array set cmd_menu {
-    {cd}	 	{cmd_parallel  "cd %D"}
-    {cvs export}	{cmd_taketurns "cd %d; cvs export -r %V -d %T %P" }
-    {cvs checkout}	{cmd_parallel  "cd %d; cvs co -r %V -d %T -A %P" }
-    {make build_n_test} {cmd_parallel "(cd %D; make build_n_test)"}
-    {setup -q build?}	{cmd_parallel  "cd %D; setup -q 'build?' -r `pwd` -M ./ups -m %P.table %P"}
-    {setup}	  	{cmd_parallel  "cd %D; setup  -r `pwd` -M ./ups -m %P.table %P"}
-    {make declare}	{cmd_taketurns "(cd %D; make declare)"}
-    {make all}	  	{cmd_parallel  "(cd %D; make all)"}
-    {make test}	  	{cmd_parallel  "(cd %D; make test)"}
-    {make clean}	{cmd_parallel  "(cd %D; make clean)"}
-    {make kits}  	{cmd_taketurns "(cd %D; make kits)"}
-    {make local}  	{cmd_taketurns "(cd %D; make local)"}
-    {remove source}	{cmd_parallel  "cd %d; rm -rf %T"}
-    {cvs update}	{cmd_parallel "(cd %D; cvs update -d)"}
-    {cvs update -A}	{cmd_parallel "(cd %D; cvs update -A)"}
-    {clear auto}	{clear_statepending}
-    {interrupt}	  	{cmd_parallel  "\x003"}
-    {exit} 		{cmd_parallel  "exit"; after 5000 exit}
+    { 1. cd}	 	{cmd_parallel  "cd %D"}
+    { 2. cvs export}	{cmd_taketurns "cd %d; cvs export -r %V -d %T %P" }
+    { 3. cvs checkout}	{cmd_parallel  "cd %d; cvs co -r %V -d %T -A %P" }
+    { 4. make build_n_test} {cmd_parallel "(cd %D; make build_n_test)"}
+    { 5. setup -q build?}	{cmd_parallel  "cd %D; setup -q 'build?' -r `pwd` -M ./ups -m %P.table %P"}
+    { 6. setup}	  	{cmd_parallel  "cd %D; setup  -r `pwd` -M ./ups -m %P.table %P"}
+    { 7. make declare}	{cmd_taketurns "(cd %D; make declare)"}
+    { 8. make all}	  	{cmd_parallel  "(cd %D; make all)"}
+    { 9. make test}	  	{cmd_parallel  "(cd %D; make test)"}
+    {10. make clean}	{cmd_parallel  "(cd %D; make clean)"}
+    {11. make kits}  	{cmd_taketurns "(cd %D; make kits)"}
+    {12. make local}  	{cmd_taketurns "(cd %D; make local)"}
+    {13. remove source}	{cmd_parallel  "cd %d; rm -rf %T"}
+    {14. cvs update}	{cmd_parallel "(cd %D; cvs update -d)"}
+    {15. cvs update -A}	{cmd_parallel "(cd %D; cvs update -A)"}
+    {17. clear auto}	{clear_statepending}
+    {18. interrupt}	  	{cmd_parallel  "\x003"}
+    {19. exit} 		{cmd_parallel  "exit"; after 5000 exit}
 }
